manifests/webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller-svc
  namespace: test
  labels:
    app: admission-controller
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: admission-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-controller
  namespace: test
  labels:
    app: admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-controller
  template:
    metadata:
      labels:
        app: admission-controller
    spec:
      serviceAccountName: admission-controller-sa
      containers:
        - name: admission-controller
          image: yisa/webhook:0.0.8
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/tidb-admission-controller
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
            - -v=2
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: admission-controller-certs
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutation-admission-contorller-cfg
  labels:
    app: admission-controller
webhooks:
  - name: pod-admission-controller.pingcap.net
    failurePolicy: Fail
    clientConfig:
      service:
        name: admission-controller-svc
        namespace: test
        path: "/pods"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURqRENDQW5TZ0F3SUJBZ0lVUk5HVzVLWUVJeklnaVRFdmJmVUkzRmpoWUNVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF4TUthM1ZpWlhKdVpYUmxjekFlRncweE9URXdNall3TlRFM01EQmFGdzB5TURFdwpNalV3TlRFM01EQmFNQ3d4S2pBb0JnTlZCQU1USVdGa2JXbHpjMmx2YmkxamIyNTBjbTlzYkdWeUxYTjJZeTUwClpYTjBMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTlIvNm1mSDNmYVEKRHdSMjRZSi9lOVFiKzJ2VTNHM3BoNTA3ZFdhQkhhUGxaSUlkazVmTE5EYzZ1a0psNDhKWkZDTTN6ODB4ZzE3RQoyKzVmZFM3OGx [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [ "" ]
        apiVersions: ["v1"]
        resources: ["pods"]
